resolving some errors and changing corsOptions
