# src/controllers/participant.controller.ts
@@ -15,6 +15,9 @@ export async function getAllParticipants(req: Request, res: Response) {
   /**
    * #swagger.tags = ['Participants']
    * #swagger.description = 'Endpoint to get all participants from database'
+   * #swagger.security = [{
+   *  "apiKeyAuth": []
+   * }]
    */
   try {
     const participants = await dbGetAllParticipants();
